--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/rdfjs/sink-map.git"
+    "url": "git://github.com/rdfjs-base/sink-map.git"
   },
   "keywords": [
     "map",
@@ -19,9 +19,9 @@
   "author": "Thomas Bergwinkl <bergi@axolotlfarm.org> (https://www.bergnet.org/people/bergi/card#me)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rdfjs/sink-map/issues"
+    "url": "https://github.com/rdfjs-base/sink-map/issues"
   },
-  "homepage": "https://github.com/rdfjs/sink-map",
+  "homepage": "https://github.com/rdfjs-base/sink-map",
   "dependencies": {
   },
   "devDependencies": {
