--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rdfjs/sink-map",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Map for RDFJS Sinks including shortcut methods",
   "main": "index.js",
   "scripts": {
@@ -22,8 +22,7 @@
     "url": "https://github.com/rdfjs-base/sink-map/issues"
   },
   "homepage": "https://github.com/rdfjs-base/sink-map",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "mocha": "^5.2.0",
     "standard": "^12.0.1"
