--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "lint": "standard --fix",
+    "lint": "standard",
     "test": "mocha test/*.cjs"
   },
   "repository": {
