--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "lint": "standard",
-    "test": "mocha test/*.cjs"
+    "test": "c8 --reporter=lcov mocha test/*.cjs"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "mocha": "^5.2.0",
+    "c8": "^7.1.2",
     "standard": "^12.0.1"
   },
   "engines": {
