--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "rdfjs",
     "sink"
   ],
-  "author": "Tomasz Pluskiewicz",
+  "author": "Thomas Bergwinkl <bergi@axolotlfarm.org> (https://www.bergnet.org/people/bergi/card#me)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/rdf-esm/sink-map/issues"
