--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "readable-stream": "^3.6.0"
   },
   "devDependencies": {
+    "@rdfjs/parser-n3": "^1.1.4",
+    "@rdfjs/serializer-ntriples": "^1.0.3",
     "mocha": "^5.2.0",
     "c8": "^7.1.2",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "string-to-stream": "^3.0.1"
   },
   "engines": {
     "node": ">=12"
