--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@rdfjs/sink-map",
   "version": "1.0.1",
-  "description": "Map for RDFJS Sinks including shortcut methods",
+  "description": "Map for RDF/JS Sinks including shortcut methods",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "standard && mocha"
+    "test": "stricter-standard && c8 --reporter=lcov --reporter=text mocha"
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,9 @@
   "homepage": "https://github.com/rdfjs-base/sink-map",
   "dependencies": {},
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "standard": "^12.0.1"
-  },
-  "engines": {
-    "node": ">=6"
+    "assert": "^2.0.0",
+    "c8": "^7.12.0",
+    "mocha": "^10.0.0",
+    "stricter-standard": "^0.2.0"
   }
 }
