--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/rdfjs-base/sink-map.git"
+    "url": "https://github.com/rdfjs-base/sink-map.git"
   },
   "keywords": [
     "map",
